# tauri-app-heroui

./: .env  Privacy_policy.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
public/book/: 01 亲士.txt  01章 亲士.txt  02章 修身.txt  03章 所染.txt  04章 法仪.txt  05章 七患.txt  06章 辞过.txt  07章 三辩.txt  08章 尚贤(上).txt  09章 尚贤(中).txt  10章 尚贤(下).txt  11章 尚同(上).txt  12章 尚同(中).txt  13章 尚同(下).txt  14章 兼爱(上).txt  15章 兼爱(中).txt  16章 兼爱(下).txt  17章 非攻(上).txt  18章 非攻(中).txt  19章 非攻(下).txt  20章 节用(上).txt  21章 节用(中).txt  22章 节用(下).txt  25章 节葬(下).txt  26章 天志(上).txt  27章 天志(中).txt  28章 天志(下).txt  31章 明鬼(下).txt  32章 非乐(上).txt  35章 非命(上).txt  36章 非命(中).txt  37章 非命(下).txt  39章 非儒(下).txt  40章 经(上).txt  41章 经(下).txt  42章 经说(上).txt  43章 经说(下).txt  44章 大取.txt  45章 小取.txt  46章 耕柱.txt  (+15 more)
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/desktop/: mod.rs
src-tauri/src/file_down/: mod.rs
src/assets/contents/: 01章 亲士.txt
src/components/: BZH_Images.tsx  BZH_Title.tsx  BZH_TitleBar.tsx  BZH_TitleBarBtn.tsx
src/components/BZH_Title/: index.tsx  style.css
src/components/BZH_TitleBar/: index.css  index.tsx
src/components/TitleBar/: index.css  index.tsx
src/context/: index.tsx  state.ts
src/design/: App.css
src/lib/: AnalysisJson.ts  DebugLog.ts  Effect.ts  GlobalEvent.ts  Rust.ts
src/net/: BzhNet.ts
src/router/: index.ts  index.tsx
src/view/: About.tsx  Contents.tsx  Detail.tsx  Home.tsx  Info.tsx  Search.tsx
(+13 files in other folders)
